2004-01-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/paper-outputter.cc (output_scope): Check if number before
	checking exact (guile cvs).

	* scm/*: Escape backslashes in scheme strings (guile cvs).

2004-01-10  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/refman.itely (Tablatures basic): annotate
	seealso sections.

	* lily/*.cc: cleanup of engraver initialize() functions.

	* lily/repeat-acknowledge-engraver.cc
	(start_translation_timestep): remove first_b_

	* lily/tab-note-heads-engraver.cc: listen to string number events
	inside < > too. (backportme).

	* Documentation/user/refman.itely (Text scripts): add fatText to
	index.

2004-01-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: 2.1.8

	* stepmake/bin/add-html-footer.py (built): add Wiki links to
	footer.

	* lily/parser.yy (translator_mod): allow \with { \remove .. }

	* lily/bar-check-iterator.cc (process): only warn if
	barCheckLastFail was changed.

	* scm/define-translator-properties.scm (barCheckLastFail): add
	property.

	* lily/main.cc (main_prog): print summary of failed files.

	* lily/axis-group-engraver.cc: move all spanner creation to
	process_music (). Now staffs can be adjusted with \override too.
	(Jan, you are a brilliant programmer!)
	
	* lily/chord-tremolo-engraver.cc (try_music): fix spurious warning. 

2004-01-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/translator-def.cc (get_translator_names): accept user
	tweaks too. 

	* mf/feta-bolletjes.mf (overdone_heads): oops, slashes are twice
	as big as normal heads. 

	* input/*ly: run convert-ly
	
	* lily/tuplet-bracket.cc (brew_molecule): call after_line_breaking
	() if dependencies are fluked.

	* scm/document-translation.scm (engraver-doc-string): update on
	latest string/symbol conventions.

	* lily/translator-ctors.cc: use Scheme_hash_table.

	* lily/translator-def.cc (get_translator_names): new function
	(add_context_mod): new function
	(get_accepted): new function
