@@ -1,3 +1,8 @@
+2004-01-10  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/translator-group.cc (get_simple_trans_list): 
+	new function; construct simple_trans_list_ lazily.
+	
 2004-01-10  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* lily/paper-outputter.cc (output_scope): Check if number before
